--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -79,6 +79,10 @@
 							Je travaille actuellement avec plusieurs <em class="text-link txt--blank">chanteurs et chanteuses</em>, embrassant un large répertoire au sein même de la chanson ; certaines formations s'orienteront plutôt vers les standards du style (Brel, Piaf, Ferré), d'autres vers des auteurs moins connus du grand public (Leprest, Dimey). Mon accordéon s'invite aussi bien sur de la chanson réaliste (Damia, Fréhel), que de la chanson coquine (Odette Laure, Anne Sylveste) ou révoltée (Renaud, Paccoud).
  						</p>
 
+						<p class="txt--blank">
+							Accordéoniste à Paris, c'est avec ces petites formations que je me produis le plus régulièrement dans les lieux intimistes de la capitale ; Montmartre, Pigalle, l'accordéon.. Ambiance guinguette et années 60 assurée !  
+						</p>
+
 						<p>
 							<a href="{{ path('collaborations') }}" class="btn-secondary">Voir les artistes accompagnés</a>
 						</p>
@@ -111,6 +115,10 @@
 					</p>
 
 					<p>
+						Certain de ces ensembles de musiciens se destinent plus particulièrement à l'animation de vos événements (mariage, anniversaire, soirée privée..), comme notre <a style="color: #000000;">groupe de jazz manouche</a>, par exemple.
+					</p>
+
+					<p>
 						<a href="{{ path('collaborations') }}" class="btn-secondary">Voir les groupes</a>
 					</p>
 				</div>
@@ -138,7 +146,7 @@
 						</p>
 
 						<p class="txt--blank">
-							À <strong>Paris</strong> et dans la France entière, différentes formules sont disponibles et de nombreuses options sont discutables en amont de la prestation : acoustique ou sonorisé, styles abordés, ... Suivant vos envies et votre budget, je peux également venir accompagné d'autres musiciens ; lors d'un mariage ou d'une soirée privée, on appréciera tout particulièrement le <a style="color: #ffffff;" href="{{ path('manouche') }}">groupe de jazz manouche</a>, par exemple. J'accompagne également plusieurs chanteuses, avec lesquelles nous proposons des répertoires autour de la chanson française ; un duo très apprécié pour vos anniversaires, ou dans les maisons de retraite (EHPAD, ...) ! 
+							À <strong>Paris</strong> et dans la France entière, différentes formules sont disponibles et de nombreuses options sont discutables en amont de la prestation : acoustique ou sonorisé, styles abordés, ... Suivant vos envies et votre budget, je peux également venir accompagné d'autres musiciens ; lors d'un mariage ou d'une soirée privée, on appréciera tout particulièrement le <a style="color: #ffffff;" href="{{ path('manouche') }}">groupe de jazz manouche</a>, par exemple. J'accompagne également plusieurs chanteuses, avec lesquelles nous proposons des répertoires autour de la chanson française ; un duo très apprécié pour vos anniversaires, ou dans les maisons de retraite (EHPAD, ...) !
  						</p>
 
 						<p>
