--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -80,7 +80,7 @@
  						</p>
 
 						<p class="txt--blank">
-							Accordéoniste à Paris, c'est avec ces petites formations que je me produis le plus régulièrement dans les lieux intimistes de la capitale ; Montmartre, Pigalle, l'accordéon.. Ambiance guinguette et années 60 assurée !  
+							Accordéoniste à Paris, c'est avec ces petites formations que je me produis le plus régulièrement dans les lieux intimistes de la capitale ; Montmartre, Pigalle, l'accordéon.. Ambiance guinguette et années 60 assurée !
 						</p>
 
 						<p>
@@ -99,7 +99,7 @@
 		<div class="container page-section">
 			<div class="row">
 				<div class="col-sm-8">
-					<h2 class="section-title">Accordéoniste en groupe</h2>
+					<h2 class="section-title">En groupe</h2>
 
 					<p>
 						En groupe, l'espace musical est à partager entre les différents instrumentistes ; les rôles sont définis plus rigoureusement, et chacun contribue à un son global. L'apport notamment d'une <strong>section rythmique</strong> (basse, batterie) va permettre d'obtenir une musique plus puissante, laissant à l'accordéon une place plus <strong>mélodique</strong>.
@@ -139,7 +139,7 @@
 
 				<div class="col-sm-8 page-section__content-wrapper">
 					<div>
-						<h2 class="section-title section-title--blank">Animations musicales</h2>
+						<h2 class="section-title section-title--blank">Mariage, soirée, cocktail . . .</h2>
 
 						<p class="txt--blank">
 							L'accordéon, de par sa richesse et sa diversité musicales, se prête particulièrement bien au jeu de l'<strong>animation musicale</strong> ; fort d'une expérience certaine, je propose un répertoire varié qui plaira à tout type de public. Ici il ne s'agit pas d'un concert classique, mais de s'adapter en fonction de votre lieu et de vos attentes ; je peux aussi bien me faire discret et jouer des standards de jazz lors d'un repas en musique ou au vin d'honneur de votre mariage, mais également jouer du musette pour faire danser les seniors en début de soirée (ou pour un anniversaire, par exemple).
