--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -30,7 +30,7 @@
             <meta name="description" content="Accordéoniste à Paris, Jérémy Dutheil intervient seul ou en groupe, pour concerts et événements (mariage, anniversaire, soirée, ...) dans toute la France.">
         {% endblock %}
 
-        <meta property="og:title" content="Accordéoniste profesionnel, Paris | Jérémy DUTHEIL">
+        <meta property="og:title" content="Accordéoniste professionnel, Paris | Jérémy DUTHEIL">
         <meta property="og:description" content="Jérémy Dutheil est accordéoniste professionnel à Paris, Ile de France">
         <meta property="og:image" content="http://www.jeremy-dutheil.fr/img/videos-pic.jpg">
 
