--- a/templates/anims/index.html.twig
+++ b/templates/anims/index.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-	Animation musicale à l'accordéon pour vos événements, fêtes ou soirées d'entreprise | Jérémy DUTHEIL
+	Animation musicale à l'accordéon | Jérémy DUTHEIL
 {% endblock %}
 
 {% block metadesc %}
-	<meta name="description" content="Animation musicale à l'accordéon pour événements, fêtes et soirées : jazz, chanson, ... En solo ou groupe.">
+	<meta name="description" content="Vous cherchez un accordéoniste ou un groupe de musiciens pour votre mariage, soirée, cocktail ? Jazz manouche, chanson, ... déplacements dans toute la France !">
 {% endblock %}
 
 {% block body %}
@@ -148,11 +148,19 @@
 			</ul>
 
 			<div class="row">
-				<div class="col-md-12">
-					<iframe class="video-center" width="800" height="500" src="https://www.youtube.com/embed/W_uOwoGcBuE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<div class="col-md-6">
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/W_uOwoGcBuE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 					<p class="text-center" style="margin-top: 15px;">
 						<a href="https://www.youtube.com/watch?v=W_uOwoGcBuE" target="_blank">https://www.youtube.com/watch?v=W_uOwoGcBuE</a>
+					</p>
+				</div>
+
+				<div class="col-md-6">
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/gtqG5br0M60" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+					<p class="text-center" style="margin-top: 15px;">
+						<a href="https://www.youtube.com/embed/gtqG5br0M60" target="_blank">https://www.youtube.com/embed/gtqG5br0M60</a>
 					</p>
 				</div>
 			</div>
@@ -222,6 +230,9 @@
 					<!--<a href="#" class="btn btn-primary">En savoir plus</a>-->
 				</div>
 			</div>
+
+			<hr style="background-color: #2d2d2d; margin: 25px 0;">
+
 		</div>
 		<!-- /.container -->
 	</section>
