--- a/templates/pages/manouche.html.twig
+++ b/templates/pages/manouche.html.twig
@@ -18,12 +18,20 @@
 			<h1 class="section-title">Groupe jazz manouche pour vos événements</h1>
 
             <p>
-                Vous recherchez un groupe de <strong>jazz manouche</strong> pour votre mariage, anniversaire, cocktail ou tout autre événement ? N'hésitez plus et <a href="{{ path('contact') }}">contactez-nous</a>. Musiciens professionnels complètement autonomes, nous nous occupons de l'ambiance musicale de votre soirée de A à Z.
-            </p>
+                Vous recherchez un groupe de <strong>jazz manouche</strong> pour votre mariage, anniversaire, cocktail ou tout autre événement ?
+			</p>
 
-            <p>
-                Grâce à la géométrie variable du groupe, vous pouvez nous accueillir très facilement quelle que soit la taille de votre lieu ; avec le <strong>jazz manouche</strong>, vous assurez une ambiance classe et agréable à vos invités.
-            </p>
+			<p>
+				Retrouvez l'ambiance des années 30 lors de votre soirée avec notre groupe de musiciens professionnels, au son des standards du style popularisé par Django Reinhardt. La guitare se fait tantôt rythmique, tantôt soliste, la contrebasse enchaîne les <i>walking bass</i>, l'accordéon s'envole par moments.. Le jazz manouche, musique virtuose s'il en est, apportera à votre réception une touche <i>vintage</i>, mais surtout très chic.
+			</p>
+
+			<p>
+				Afin de s'adapter au mieux à vos envies et votre budget, nous proposons <strong>différentes formules</strong> à partir du duo (voir ci-dessous) ; nous sommes également complètement autonomes en matériel de sonorisation. Nous nous occupons de tout, vous n'avez plus qu'à apprécier !
+			</p>
+
+			<p>
+				N'hésitez plus et <a href="{{ path('contact') }}">contactez-nous</a> pour plus d'informations.
+			</p>
 
             <h2 class="section-title section-title--small">En duo</h2>
 
@@ -44,20 +52,24 @@
 
             <h2 class="section-title section-title--small">En trio</h2>
 
+			<p>
+				Le duo s'enrichit d'une contrebasse, permettant une assise plus solide de la rythmique ; l'instrument apporte également une touche visuelle non négligeable pour l'ambiance !
+			</p>
+
             <div class="row">
                 <div class="col-md-12">
                     <iframe class="video-center" width="800" height="500" src="https://www.youtube.com/embed/CXq4DWhwqSU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-                    <!--<p class="text-center" style="margin-top: 15px;">
-                        Quelques extraits en trio : <a href="https://www.youtube.com/watch?v=CXq4DWhwqSU" target="_blank">https://www.youtube.com/watch?v=CXq4DWhwqSU</a>
-                    </p>-->
+                    <p class="text-center" style="margin-top: 15px;">
+                        Quelques extraits en trio : Bossa Dorado, Autumn Leaves, All of Me, Fly me to the Moon
+                    </p>
                 </div>
             </div>
 
             <h2 class="section-title section-title--small" style="margin-top: 15px;">Quartet et plus</h2>
 
             <p>
-                Nous pouvons également venir à 4 ou plus : ajout d'une seconde guitare rythmique pour plus de punch, arrivée d'un violon pour d'autres possibilités mélodiques, une chanteuse pour les thèmes, ... N'hésitez pas à <a href="{{ path('contact') }}">nous contacter</a> pour établir une formule sur mesure pour votre événement.
+                Nous pouvons également venir à 4 ou plus : ajout d'une seconde guitare rythmique pour plus de punch, arrivée d'un violon pour d'autres possibilités mélodiques, une chanteuse pour les thèmes, ... Ce ne sont que des exemples, n'hésitez pas à <a href="{{ path('contact') }}">nous contacter</a> pour établir une formule sur mesure pour votre événement.
             </p>
 
             <h2 class="section-title section-title--small">Quelques titres du répertoire</h2>
@@ -75,6 +87,10 @@
                     Ménilmontant
                 </li>
 
+				<li>
+					Indifférence
+				</li>
+
                 <li>
                     Sunny Side of the Street
                 </li>
@@ -90,6 +106,10 @@
                 <li>
                     Autumn Leaves
                 </li>
+
+				<li>
+					Made in France
+				</li>
 
                 <li>
                     <i>Et bien d'autres...</i>
