--- a/templates/anims/index.html.twig
+++ b/templates/anims/index.html.twig
@@ -160,7 +160,7 @@
 					<iframe width="560" height="315" src="https://www.youtube.com/embed/gtqG5br0M60" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 					<p class="text-center" style="margin-top: 15px;">
-						<a href="https://www.youtube.com/embed/gtqG5br0M60" target="_blank">https://www.youtube.com/embed/gtqG5br0M60</a>
+						<a href="https://www.youtube.com/watch?v=gtqG5br0M60" target="_blank">https://www.youtube.com/watch?v=gtqG5br0M60</a>
 					</p>
 				</div>
 			</div>
