--- a/templates/bands/elena.html.twig
+++ b/templates/bands/elena.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-	Jérémy DUTHEIL - Elena Josse
+	Elena Josse | Duo accordéon / voix, chanson française
 {% endblock %}
 
 {% block body %}
