--- a/templates/bands/fdf.html.twig
+++ b/templates/bands/fdf.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-	Jérémy DUTHEIL - Les Fils de Flûte
+	Les Fils de Flûte | Chanson française festive
 {% endblock %}
 
 {% block body %}
