--- a/templates/bands/madjid.html.twig
+++ b/templates/bands/madjid.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-	Jérémy DUTHEIL - Madjid et Yano Tët
+	Madjid et Yano Tët | Rock oriental
 {% endblock %}
 
 {% block body %}
