--- a/templates/bands/marie.html.twig
+++ b/templates/bands/marie.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-	Jérémy DUTHEIL - Marie Pétrolette
+	Marie Pétrolette | Chanson française
 {% endblock %}
 
 {% block body %}
