--- a/templates/bands/marquise.html.twig
+++ b/templates/bands/marquise.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-	Jérémy DUTHEIL - La Marquise
+	La Marquise | Trio chanson swing
 {% endblock %}
 
 {% block body %}
