--- a/templates/bands/mime.html.twig
+++ b/templates/bands/mime.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-	Jérémy DUTHEIL - MimE, chanson débraillée !
+	MimE | Chanson débraillée !
 {% endblock %}
 
 {% block body %}
