--- a/templates/bands/ruelamome.html.twig
+++ b/templates/bands/ruelamome.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-	Jérémy DUTHEIL - Rue la Môme
+	Rue la Môme | Hommage à Edith Piaf
 {% endblock %}
 
 {% block body %}
