--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,14 +23,14 @@
         <meta name="theme-color" content="#ffffff">
 
         <title>
-            {% block title %}Accordéoniste | Paris, France | Jérémy DUTHEIL{% endblock %}
+            {% block title %}Accordéoniste | Paris, France | Jérémy Dutheil{% endblock %}
         </title>
 
         {% block metadesc %}
             <meta name="description" content="Accordéoniste à Paris, Jérémy Dutheil intervient seul ou en groupe, pour concerts et événements (mariage, anniversaire, soirée, ...) dans toute la France.">
         {% endblock %}
 
-        <meta property="og:title" content="Accordéoniste professionnel, Paris | Jérémy DUTHEIL">
+        <meta property="og:title" content="Accordéoniste professionnel, Paris | Jérémy Dutheil">
         <meta property="og:description" content="Jérémy Dutheil est accordéoniste professionnel à Paris, Ile de France">
         <meta property="og:image" content="http://www.jeremy-dutheil.fr/img/videos-pic.jpg">
 
