--- a/templates/pages/collaborations.html.twig
+++ b/templates/pages/collaborations.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-	Accordéoniste, Paris | Jérémy DUTHEIL | Collaborations artistiques
+	Accordéoniste, Paris | Jérémy Dutheil | Collaborations artistiques
 {% endblock %}
 
 {% block metadesc %}
