--- a/templates/pages/contact.html.twig
+++ b/templates/pages/contact.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Contact | Jérémy Dutheil | Accordéoniste, Paris{% endblock %}
+
 {% block body %}
 	<section class="flash flash--limited">
 		<div class="flash-item">
