--- a/templates/pages/manouche.html.twig
+++ b/templates/pages/manouche.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-	Groupe jazz manouche pour vos événements | Jérémy DUTHEIL, accordéoniste à Paris
+	Groupe jazz manouche pour vos événements | Jérémy Dutheil, accordéoniste à Paris
 {% endblock %}
 
 {% block body %}
