fix title index

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,7 +23,7 @@
         <meta name="theme-color" content="#ffffff">
 
         <title>
-            {% block title %}Accordéoniste à Paris | Jérémy Dutheil | Soirées, mariages...{% endblock %}
+            {% block title %}Accordéoniste à Paris | Jérémy Dutheil | Soirée, mariage, ...{% endblock %}
         </title>
 
         {% block metadesc %}
