--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -146,7 +146,7 @@
 						</p>
 
 						<p class="txt--blank">
-							À <strong>Paris</strong> et dans la France entière, différentes formules sont disponibles et de nombreuses options sont discutables en amont de la prestation : acoustique ou sonorisé, styles abordés, ... Suivant vos envies et votre budget, je peux également venir accompagné d'autres musiciens ; lors d'un mariage ou d'une soirée privée, on appréciera tout particulièrement le <a style="color: #ffffff;" href="{{ path('manouche') }}">groupe de jazz manouche</a>, par exemple. J'accompagne également plusieurs chanteuses, avec lesquelles nous proposons des répertoires autour de la chanson française ; un duo très apprécié pour vos anniversaires, ou dans les maisons de retraite (EHPAD, ...) !
+							À <a style="color: #ffffff;" href="{{ path('soirees_paris') }}">Paris</a> et dans la France entière, différentes formules sont disponibles et de nombreuses options sont discutables en amont de la prestation : acoustique ou sonorisé, styles abordés, ... Suivant vos envies et votre budget, je peux également venir accompagné d'autres musiciens ; lors d'un mariage ou d'une soirée privée, on appréciera tout particulièrement le <a style="color: #ffffff;" href="{{ path('manouche') }}">groupe de jazz manouche</a>, par exemple. J'accompagne également plusieurs chanteuses, avec lesquelles nous proposons des répertoires autour de la chanson française ; un duo très apprécié pour vos anniversaires, ou dans les maisons de retraite (EHPAD, ...) !
  						</p>
 
 						<p>
