--- a/templates/pages/contact.html.twig
+++ b/templates/pages/contact.html.twig
@@ -22,6 +22,10 @@
 			<p>
 				Contactez moi par mail : <a href="mailto:dutheil.jeremy@gmail.com" class="text-link">dutheil.jeremy@gmail.com</a> ou téléphone : 06.85.38.22.16
 			</p>
+
+			<p>
+				Pour comprendre les tarifs pratiqués, vous pouvez consulter mon article à ce sujet : <a href="{{ path('tarifs') }}">Quel est le tarif d'un groupe de musique pour votre soirée ?</a>
+			</p>
 		</div>
 	</section>
 
