--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -115,7 +115,7 @@
 					</p>
 
 					<p>
-						Certain de ces ensembles de musiciens se destinent plus particulièrement à l'animation de vos événements (mariage, anniversaire, soirée privée..), comme notre <a style="color: #000000;">groupe de jazz manouche</a>, par exemple.
+						Certain de ces ensembles de musiciens se destinent plus particulièrement à l'animation de vos événements (mariage, anniversaire, soirée privée..), comme notre <a style="color: #000000;">groupe de jazz manouche</a>, par exemple (voir aussi l'ensemble de nos <a href="{{ path('musiciens_soirees') }}">musiciens pour vos soirées</a>).
 					</p>
 
 					<p>
