--- a/templates/pages/musiciens_soirees.html.twig
+++ b/templates/pages/musiciens_soirees.html.twig
@@ -26,7 +26,7 @@
             </p>
 
 			<p>
-				Destinées à tout type de public, ces formules s'adressent aussi bien aux <em>particuliers</em> qu'aux <em>professionnels</em> ; grâce aux qualités acoustique de l'instrument, les conditions techniques sont réduites au minimum. En effet, la plupart du temps, la sonorisation n'est pas nécessaire. Pour de plus grands espaces, pas d'inquiétude : Jérémy Dutheil (et ses musiciens) sont <strong>autonomes</strong> et installeront un système de diffusion adapté à votre lieu.
+				Destinées à tout type de public, ces formules s'adressent aussi bien aux <em>particuliers</em> qu'aux <em>professionnels</em> ; grâce aux qualités acoustique de l'accordéon (et des autres instruments), les conditions techniques sont réduites au minimum. En effet, la plupart du temps, la sonorisation n'est pas nécessaire. Pour de plus grands espaces, pas d'inquiétude : Jérémy Dutheil (et ses musiciens) sont <strong>autonomes</strong> et installeront un système de diffusion adapté à votre lieu.
 			</p>
 
             <p>
@@ -35,32 +35,53 @@
 
 			<h2 class="section-title section-title--small" style="margin-top: 15px;">Jazz manouche</h2>
 
+			<p>
+				Le jazz manouche, popularisé par Django Reinhardt et Stéphane Grappeli, est un style particulièrement demandé lors des soirées ; pour un vin d'honneur par exemple, vous proposerez alors à vos convives une musique d'ambiance très agréable, qui ajoutera un plus non négligeable à ce moment déjà extraordinaire. Dans le cadre d'une soirée d'entreprise (cocktail, inauguration, soirée CE...), c'est votre image de marque que vous promouverez, en ajoutant une musique classe et sans aucun doute associée au "luxe".
+			</p>
+
             <p>
-                Notre groupe de musiciens jazz manouche propose un répertoire axé autour des grands standards du style popularisé par Django Reinhardt : <i>Minor Swing, All of Me, Les Yeux Noirs, ...</i>. L'accordéon peut s'entourer d'une guitare, une contrebasse, mais également un violon ou des cuivres... selon vos envies ! De 2 à 4h de musique, acoustique ou sonorisé.
+                Notre groupe de musiciens jazz manouche propose un répertoire axé autour des grands standards du style popularisé par Django Reinhardt : <i>Minor Swing, All of Me, Les Yeux Noirs, ...</i>. L'accordéon peut s'entourer d'une guitare, une contrebasse, mais également un violon ou des cuivres... selon vos envies ! De 2 à 4h de musique, acoustique ou sonorisé ; nous sommes bien évidemment tous <strong>musiciens professionnels</strong>, et possédons une grande expérience scénique et sur nos instruments respectifs.
             </p>
+
+			<p>
+				<a class="btn btn-primary" href="{{ path('manouche') }}">Plus d'informations sur le groupe jazz manouche</a>
+			</p>
 
             <div class="row">
 				<div class="col-md-6">
-					<iframe class="video-center" width="560" height="315" src="https://www.youtube.com/embed/W_uOwoGcBuE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/W_uOwoGcBuE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
 				</div>
 
 				<div class="col-md-6">
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/Iklby0R-WyQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Iklby0R-WyQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
 				</div>
 			</div>
 
             <h2 class="section-title section-title--small" style="margin-top: 15px;">Chanson française</h2>
 
             <p>
-                Nous proposons des duos accordéon / voix autour de la chanson française, en toute intimité ; de Piaf à Brel, en passant par Aznavour ou encore Odette Laure, il y en a pour tous les goûts...
+                Nous proposons des duos accordéon / voix autour de la chanson française, en toute intimité ; de Piaf à Brel, en passant par Aznavour ou encore Odette Laure, il y en a pour tous les goûts... <br>
+				Le duo chanson française s'adapte parfaitement à des soirées conviviales, dans un style <i>rétro</i> ou classe ; les chansons jouées sont pour la plupart très connues, et vos invités pourront reprendre les refrains en coeur ! Musique d'ambiance, ou réelle animation de soirée sous forme de concert.. C'est vous qui décidez du style que vous préférez pour votre événement !
             </p>
 
             <div class="row">
 				<div class="col-md-6">
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/gtqG5br0M60" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/gtqG5br0M60" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+
+					<p class="text-center">
+						<i>Avec Cid Marquis, nous proposons un répertoire d'1h30 en hommage à Edith Piaf ; <a href="{{ path('ruelamome') }}">plus d'informations ici</a></i>
+					</p>
 				</div>
 				<div class="col-md-6">
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/_cyzXvBjHkE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/_cyzXvBjHkE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
 				</div>
 			</div>
         </div>
