--- a/templates/anims/index.html.twig
+++ b/templates/anims/index.html.twig
@@ -103,7 +103,9 @@
 
 			<div class="row">
 				<div class="col-md-6">
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/8eY4FsHf7g0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/8eY4FsHf7g0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
 
 					<p class="text-center" style="margin-top: 15px;">
 						<a href="https://www.youtube.com/watch?v=mv3DgoYPCds" target="_blank">https://www.youtube.com/watch?v=mv3DgoYPCds</a>
@@ -111,7 +113,9 @@
 				</div>
 
 				<div class="col-md-6">
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/VVWMhc7LNcM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/VVWMhc7LNcM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
 
 					<p class="text-center" style="margin-top: 15px;">
 						<a href="https://www.youtube.com/watch?v=VVWMhc7LNcM" target="_blank">https://www.youtube.com/watch?v=VVWMhc7LNcM</a>
@@ -126,7 +130,7 @@
 			<h2 class="section-title section-title--small" style="margin-top: 20px;">En groupe, pour plus d'énergie</h2>
 
 			<p>
-				Vous cherchez un <strong>groupe de musique</strong> pour votre soirée ou événement, plutôt qu'un musicien seul ? Jérémy propose également de nombreuses formules, où lui et son accordéon sont rejoints par d'autres instrumentistes ; les formations sont variées, en fonction de vos envies et de votre budget. En voici quelque exemples, n'hésitez pas à <a href="{{ path('contact') }}">envoyer un message</a> pour plus d'informations.
+				Vous cherchez un <strong><a href="{{ path('musiciens_soirees') }}" style="color: #000000;">groupe de musique</a></strong> pour votre soirée ou événement, plutôt qu'un musicien seul ? Jérémy propose également de nombreuses formules, où lui et son accordéon sont rejoints par d'autres instrumentistes ; les formations sont variées, en fonction de vos envies et de votre budget. En voici quelque exemples, n'hésitez pas à <a href="{{ path('contact') }}">envoyer un message</a> pour plus d'informations.
 			</p>
 
 			<ul>
@@ -149,7 +153,9 @@
 
 			<div class="row">
 				<div class="col-md-6">
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/W_uOwoGcBuE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/W_uOwoGcBuE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
 
 					<p class="text-center" style="margin-top: 15px;">
 						<a href="https://www.youtube.com/watch?v=W_uOwoGcBuE" target="_blank">https://www.youtube.com/watch?v=W_uOwoGcBuE</a>
@@ -157,7 +163,9 @@
 				</div>
 
 				<div class="col-md-6">
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/gtqG5br0M60" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/gtqG5br0M60" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
 
 					<p class="text-center" style="margin-top: 15px;">
 						<a href="https://www.youtube.com/watch?v=gtqG5br0M60" target="_blank">https://www.youtube.com/watch?v=gtqG5br0M60</a>
