--- a/templates/anims/mariages.html.twig
+++ b/templates/anims/mariages.html.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block metadesc %}
-	<meta name="description" content="Animation musicale à l'accordéon pour votre mariage : jazz, chanson française, ... En solo ou en groupe">
+	<meta name="description" content="Vous cherchez un accordéoniste ou un groupe de musique pour votre mariage (vin d'honneur, repas, ...) ? N'hésitez plus, et découvrez nos formules sur mesure (jazz manouche, chanson française, ...) !">
 {% endblock %}
 
 {% block body %}
@@ -19,7 +19,7 @@
 
 	<section class="content-section bg--blank page-section">
 		<div class="container">
-			<h1 class="section-title">Animations musicales mariages</h1>
+			<h1 class="section-title">Accordéoniste pour votre mariage</h1>
 
 			<p>
 				Accordéoniste professionnel basé à Paris (Ile de France), je suis disponible pour des <strong>animations musicales</strong> lors de votre mariage et me déplace dans la France entière ; les formules et le répertoire sont variés, en accord avec vos envies (vin d'honneur, soirée, ...). <br>
@@ -27,13 +27,24 @@
 			</p>
 
 			<p>
-				Suivant vos envies et celles de vos convives, nous préparerons en amont l'orientation du spectacle ; plutôt dansant, plutôt chanson, plutôt discret.. Qu'il s'agisse plutôt d'animer le vin d'honneur, le repas ou la soirée.. C'est vous (et vos invités !) qui décidez tout. <br>
-				Je propose des <strong>tarifs abordables</strong>, et des formules <strong>tout compris</strong> (sonorisation éventuelle, ...).
+				Suivant vos envies et celles de vos convives, nous préparerons en amont l'orientation du spectacle pour votre mariage ; plutôt dansant, plutôt chanson, plutôt discret.. Qu'il s'agisse plutôt d'animer le vin d'honneur, le repas ou la soirée.. C'est vous (et vos invités !) qui décidez tout. <br>
+				Je propose des <a href="{{ path('tarifs') }}">tarifs abordables</a>, et des formules <strong>tout compris</strong> (sonorisation éventuelle, ...).
 			</p>
 
 			<p>
-				N'hésitez pas à <a href="{{ path('contact') }}" class="text-link">me contacter</a> pour en discuter !
+				Vous trouverez des informations détaillées sur les possibilités d'animations sur <a href="{{ path('animations') }}">cette page</a> ; n'hésitez pas à <a href="{{ path('contact') }}" class="text-link">me contacter</a> pour en discuter !
 			</p>
+
+			<h2 class="section-title section-title--small">Vous préférez un groupe de musique pour votre mariage ?</h2>
+
+			<img src="img/triomanouche.jpg" class="img-fluid" style="display: block; width: 80%; margin: auto;">
+
+			<p style="margin-top: 20px;">
+				Pour votre mariage, je propose des concerts en <strong>solo à l'accordéon</strong>, mais peux également être accompagné d'autres <a style="color: #555555;" href="{{ path('musiciens_soirees') }}">musiciens professionnels</a> (guitariste, chanteuse, contrebassiste, ...). <br>
+				Pour ce type d'événement, l'une des formules les plus demandées est <a href="{{ path('manouche') }}">le groupe de jazz manouche</a>, mais je propose également d'autres groupes de musique, comme des duos avec chanteuses ; vous trouverez plus d'informations sur <a href="{{ path('animations') }}">cette page</a>.
+			</p>
+
+
 		</div>
 		<!-- /.container -->
 	</section>
