--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -123,11 +123,9 @@
                             <a class="nav-link {% if route == 'contact' %}nav-link--active{% endif %}" href="{{ path('contact') }}">Contact</a>
                         </li>
 
-                        <!--
                         <li class="nav-item px-2 py-1">
-                            <a class="nav-link {% if route == '/blog' %}nav-link--active{% endif %}" href="">Blog</a>
+                    <a class="nav-link {% if route == '/blog' %}nav-link--active{% endif %}" href="/blog">Blog</a>
                         </li>
-                        -->
 
                         {% if app.user %}
                             <li><a href="{{ path("author_create") }}">Admin</a></li>
