--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,6 +22,8 @@
         <meta name="msapplication-TileImage" content="{{ asset('img/favicon/ms-icon-144x144.png') }}">
         <meta name="theme-color" content="#ffffff">
 
+        <meta name="p:domain_verify" content="e81b1a9f19c14f139ea5655c3bee3b3d"/>
+
         <title>
             {% block title %}Accordéoniste à Paris | Jérémy Dutheil | Soirée, mariage, ...{% endblock %}
         </title>
